--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <body style="margin:0;">
-<embed src="./cover.pdf" style="width:100%;height:100%;"/>
+<object data="./cover.pdf" type="application/pdf" width="100%" height="100%">
+  <embed src="./cover.pdf" type="application/pdf" style="width:100%;height:100%;">
+    <p>This browser does not support PDFs. Please download the PDF to view it: <a href="./cover.pdf">Download PDF</a>.</p>
+  </embed>
+</object>
 </body>
